--- a/irasai/templates/base.html
+++ b/irasai/templates/base.html
@@ -22,6 +22,11 @@ MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
                 <li><a href="{% url 'homepage-url' %}">Pradžia</a></li>
                 <li><a href="">Visi įrašai</a></li>
                 <li><a href="{% url 'artistai-visi-url' %}">Visi atlikėjai</a></li>
+                 <li>
+                    <form action="rch-name' %}" method="get" class="form-group">
+                        <input type="text" name="search_text" class="form-control" placeholder="Paieška" style="min-width: 6rem;">
+                    </form>
+                </li>
 
             </ul>
             {% endblock %}
