kurima po linka, daba tuscias

--- a/irasai/templates/artistai_visi.html
+++ b/irasai/templates/artistai_visi.html
@@ -5,7 +5,7 @@
 <p>Mūsų įrašų atlikėjų sąrašas:</p>
 <ul>
     {% for artistas_o in artistai_visos_eilutes_t %}
-        <li>{{ artistas_o.pavadinimas }}</li>
+        <li><a href="">{{ artistas_o.pavadinimas }}</a></li>
     {% endfor %}
 </ul>
 {% endblock %}
