vieno artisto viewse prijungti jo irasai, per related_name is modelio

--- a/irasai/templates/artistas_vienas.html
+++ b/irasai/templates/artistas_vienas.html
@@ -3,7 +3,16 @@
 {% block content %}
 <h4> {{ artistas_viena_eilute_t.pavadinimas }} {{ artistas_viena_eilute_t.metai }}</h4>
 <hr/>
-<p> {{ artistas_viena_eilute_t.biografija }} </p>
+<p>Biografija: {{ artistas_viena_eilute_t.biografija }} </p>
 <hr/>
-
+{% if artistas_viena_eilute_t.irasas_set.all %}
+<p>Atlikėjas {{ artistas_viena_eilute_t.pavadinimas }} turi šiuos įrašus: </p>
+<hr/>
+    {% for irasas_o in artistas_viena_eilute_t.irasas_set.all %}
+        <p>{{ irasas_o.albumas }}, metai: {{ irasas_o.metai_pasirode }}</p>
+        <hr/>
+    {% endfor %}
+{% else %}
+    <p>Atlikėjo įrašų nėra</p>
+{% endif %}
 {% endblock %}
