paieska, plius joje linkai

--- a/irasai/templates/artistas_vienas.html
+++ b/irasai/templates/artistas_vienas.html
@@ -6,8 +6,8 @@
 <p>Biografija: {{ artistas_viena_eilute_t.biografija }} </p>
 <hr/>
 {% if artistas_viena_eilute_t.irasas_set.all %}
-<p>Atlikėjas {{ artistas_viena_eilute_t.pavadinimas }} turi šiuos įrašus: </p>
-<hr/>
+<p class="text-white bg-dark">Atlikėjas {{ artistas_viena_eilute_t.pavadinimas }} turi šiuos įrašus: </p>
+
     {% for irasas_o in artistas_viena_eilute_t.irasas_set.all %}
         <p>{{ irasas_o.albumas }}, metai: {{ irasas_o.metai_pasirode }}</p>
         <hr/>
